# minion-cli

./: .env.example  .gitignore  CACHING_BASELINE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
examples/: a2a_echo_agent.py  mcp_notes_server.py  mcp_workspace_server.py
minion/: __init__.py  __main__.py  cli.py  config.py  config_file.py  confirmation.py  conversation.py  diff.py  display_utils.py  prompts.py  reflection.py  repl.py  runner.py  session.py  setup_wizard.py  theme.py
minion/a2a/: __init__.py  card.py  client.py  config.py  manager.py  models.py  server.py
minion/agents/: __init__.py  display.py  manifest.py  persist.py  registry.py  runner.py
minion/cli/: __init__.py  _core.py  agents.py  config.py  doctor.py  mcp.py  memory.py  remote.py  skills.py
minion/compact/: __init__.py  base.py  summary.py  truncate.py
minion/config/: __init__.py  file.py  interactive.py  model_catalog.py  wizard.py
minion/context/: __init__.py  filetree.py  manifest.py  project.py  prompts.py
minion/hooks/: __init__.py  events.py  handler.py  manifest.py  persist.py  registry.py  result.py  runner.py
minion/llm/: __init__.py  anthropic.py  base.py  conversation.py  factory.py  openai.py  reflection.py  validate.py
minion/mcp/: __init__.py  base.py  client.py  config.py  http_client.py  manager.py  sse.py
minion/memory/: __init__.py  config.py  embedder.py  extractor.py  injection.py  record.py  store.py  triggers.py  vector_store.py
minion/output/: __init__.py  base.py  console.py  diff.py  display_utils.py  formatter.py  tui.py
minion/planner/: __init__.py  creator.py  storage.py
minion/repl/: __init__.py  agent_handlers.py  commands.py  config_cmd.py  init_md.py  input.py  mcp.py  session.py  state.py
minion/runner/: __init__.py  context.py  loop.py  parallel.py  session.py
minion/skills/: __init__.py  manifest.py  persist.py  registry.py  runner.py
minion/theme/: __init__.py  banner.py  console.py  palette.py  printers.py
minion/tools/: __init__.py  confirmation.py  definitions.py  executor.py  implementations.py  outline.py  permissions.py
minion/tracing/: __init__.py  cli.py  events.py  server.py  tracer.py  ui.html
minion/tui/: __init__.py  agent_registry.py  app.py  choice_panel.py  conversation.py  inspector.py  keys.py  messages.py  permission.py  render.py  slots.py  (+4 more)
tests/: test_a2a.py  test_a2a_async.py  test_a2a_server.py  test_adapters.py  test_agents.py  test_compact.py  test_config.py  test_config_file.py  test_confirmation.py  test_context.py  test_conversation.py  test_diff.py  test_display_utils.py  test_executor.py  test_factory.py  test_formatter.py  test_hooks.py  test_hooks_screen.py  test_llm_async.py  test_llm_rate_limit.py  test_llm_types.py  test_mcp.py  test_mcp_http.py  test_mcp_notifications.py  test_mcp_sdk.py  test_memory_embedder.py  test_memory_extractor.py  test_memory_flow.py  test_memory_injection.py  test_memory_record.py  test_memory_store.py  test_memory_triggers.py  test_memory_vector_store.py  test_outline.py  test_permissions.py  test_planner.py  test_planning_flow.py  test_reflection.py  test_repl.py  test_repl_memory_commands.py  (+13 more)
(+24 files in other folders)
