[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minion-cli"
version = "0.1.0"
description = "🍌 Minion — a cheerful agentic coding assistant for your terminal"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.scripts]
minion = "minion.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["minion"]
