[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minion-cli"
version = "0.1.0"
description = "🍌 Minion — a cheerful agentic coding assistant for your terminal"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "questionary>=2.0",
    "pyfiglet>=0.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
minion  = "minion.cli:app"
nefario = "minion.tracing.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["minion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
