[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minion-cli"
version = "1.0.0"
description = "A terminal-native agentic coding assistant — tool use, memory, MCP, subagents, and A2A."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["ai", "agent", "cli", "llm", "coding-assistant", "mcp", "a2a"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "questionary>=2.0",
    "pyfiglet>=0.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
minion  = "minion.cli:_entry"
nefario = "minion.tracing.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["minion"]
include = [
    "minion/**/*.py",
    "minion/**/*.yaml",
    "minion/**/*.html",
]

[tool.coverage.run]
source = ["minion"]
omit = [
    "minion/repl.py",
    "minion/setup_wizard.py",
    "minion/theme/*",
    "minion/tracing/server.py",
    "minion/tracing/cli.py",
    "minion/tracing/events.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
